Homework number 3 mistakes fixed rev. 13.09